# klee

./: .cirrus.yml  .clang-format  .codecov.yml  .cproject  .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .project  .shellcheckrc  .travis.yml  Additions.md  CMakeLists.txt  CMakeLists.txt.user.f9610b8  CNAME  CoreutilsExperiments.html  Dockerfile  Documentation.html  Experimental.html  GetInvolved.html  GetStarted.html  KQuery.html  LICENSE.TXT  Makefile  Makefile.common  Makefile.config.in  Makefile.rules  MetaSMT.mk  NEWS  OpenProjects.html  Publications.html  README-CMake.md  README.md  README.txt  README_yices.md  TODO.txt  TestingCoreutils.html  Tutorial-1.html  Tutorial-2.html  (+23 more)
autoconf/: AutoRegen.sh  configure.ac
docs/: CMakeLists.txt  doxygen.cfg  doxygen.cfg.in  intro  lazy_instantiation.md  overview
docs/SMT-COMP/: BitVector_ArraysEx.smt  BitVectors.smt  QF_AUFBV.smt  QF_BV.smt
lib/: CMakeLists.txt  Makefile  README.txt
lib/ADT/: CMakeLists.txt  SparseStorage.cpp  TestCase.cpp  TestCaseUtils.cpp
lib/Basic/: BOut.cpp  CMakeLists.txt  CmdLineOptions.cpp  ConstructSolverChain.cpp  KTest.cpp  Makefile  README.txt  Statistics.cpp
lib/Core/: AddressManager.cpp  AddressManager.h  AddressSpace.cpp  AddressSpace.h  BidirectionalSearcher.cpp  BidirectionalSearcher.h  BlockTable.cpp  BlockTable.h  BoundedMergeHandler.cpp  CMakeLists.txt  CallPathManager.cpp  CallPathManager.h  CodeEvent.h  CodeLocation.cpp  CodeLocation.h  Common.cpp  Common.h  ConstructStorage.h  Context.cpp  Context.h  CoreStats.cpp  CoreStats.h  CoverageTracker.cpp  CoverageTracker.h  Dependency.cpp  Dependency.h  DistanceCalculator.cpp  DistanceCalculator.h  ETree.cpp  ETree.h  EventRecorder.cpp  EventRecorder.h  ExecutionState.cpp  ExecutionState.h  ExecutionTree.cpp  ExecutionTree.h  ExecutionTreeWriter.cpp  ExecutionTreeWriter.h  Executor.cpp  Executor.h  (+78 more)
lib/Expr/: APFloatEval.cpp  AlphaBuilder.cpp  ArrayCache.cpp  ArrayExprOptimizer.cpp  ArrayExprOptimizer.h  ArrayExprRewriter.cpp  ArrayExprRewriter.h  ArrayExprVisitor.cpp  ArrayExprVisitor.h  Assigment.cpp  Assignment.cpp  AssignmentGenerator.cpp  AssignmentGenerator.h  CMakeLists.txt  Constraints.cpp  Expr.cpp  ExprBuilder.cpp  ExprEvaluator.cpp  ExprPPrinter.cpp  ExprSMTLIBLetPrinter.cpp  ExprSMTLIBPrinter.cpp  ExprUtil.cpp  ExprVisitor.cpp  IndependentConstraintSetUnion.cpp  IndependentSet.cpp  Lexer.cpp  Makefile  Parser.cpp  Path.cpp  SourceBuilder.cpp  SymbolicSource.cpp  Updates.cpp
lib/Module/: Annotation.cpp  CMakeLists.txt  CallRemover.cpp  CallSplitter.cpp  Checks.cpp  CodeGraphDistance.cpp  CodeGraphInfo.cpp  ExtractTypeMetaPass.cpp  FunctionAlias.cpp  InstructionInfoTable.cpp  InstructionOperandTypeCheckPass.cpp  Instrument.cpp  InstrumentLegacy.cpp  IntrinsicCleaner.cpp  KInstruction.cpp  KLEEIRMetaData.h  KModule.cpp  KType.cpp  KValue.cpp  LocalVarDeclarationFinderPass.cpp  LocationInfo.cpp  LowerSwitch.cpp  Makefile  ModuleHelper.h  ModuleUtil.cpp  OptNone.cpp  Optimize.cpp  OptimizeLegacy.cpp  Passes.h  PhiCleaner.cpp  RaiseAsm.cpp  ReturnLocationFinderPass.cpp  ReturnSplitter.cpp  SarifReport.cpp  Scalarizer.cpp  StreamWithLine.cpp  StreamWithLine.h  Target.cpp  TargetForest.cpp  TargetHash.cpp  (+1 more)
lib/Runner/: CMakeLists.txt  parse_static_analysis_json.cpp  run_klee.cpp
lib/SMT/: LICENSE.CVC3  Makefile  SMTParser.cpp  SMTParser.h  exception.h  lang.h  main.cpp  parser.cpp  parser.h  parser_exception.h  parser_temp.h  smtlib.lex  smtlib.y  smtlib_lexer.cpp  smtlib_parser.cpp  smtlib_parser.h
lib/Solver/: AlphaEquivalenceSolver.cpp  AssignmentValidatingSolver.cpp  BitwuzlaBuilder.cpp  BitwuzlaBuilder.h  BitwuzlaHashConfig.cpp  BitwuzlaHashConfig.h  BitwuzlaSolver.cpp  BitwuzlaSolver.h  CMakeLists.txt  CachingSolver.cpp  CexCachingSolver.cpp  ConcretizationManager.cpp  ConcretizingSolver.cpp  ConstantDivision.cpp  ConstantDivision.h  ConstructSolverChain.cpp  CoreSolver.cpp  DummySolver.cpp  DummySolver.h  FastCexSolver.cpp  IncompleteSolver.cpp  IndependenceAnalysis.cpp  IndependenceAnalysis.h  IndependentSolver.cpp  KQueryLoggingSolver.cpp  Makefile  MetaSMTBuilder.h  MetaSMTSolver.cpp  MetaSMTSolver.h  PCLoggingSolver.cpp  QueryLoggingSolver.cpp  QueryLoggingSolver.h  SMTLIBLoggingSolver.cpp  STPBuilder.cpp  STPBuilder.h  STPSolver.cpp  STPSolver.h  STPSolverImpl.cpp  STPSolverImpl.h  SharedMem.h  (+23 more)
lib/Support/: CMakeLists.txt  CompressionStream.cpp  ErrorHandling.cpp  FileHandling.cpp  KConfig.cpp  Makefile  MemoryUsage.cpp  PrintVersion.cpp  README.txt  RNG.cpp  RoundingModeUtil.cpp  Time.cpp  Timer.cpp  TreeStream.cpp
runtime/: CMakeLists.txt  Makefile  Makefile.cmake.bitcode  Makefile.cmake.bitcode.config.in  Makefile.cmake.bitcode.rules
runtime/Fortify/: CMakeLists.txt  fortify.c
runtime/FreeStanding/: CMakeLists.txt  Makefile.cmake.bitcode  memcpy.c  memmove.c  memset.c
runtime/Freestanding/: CMakeLists.txt  fortify-fs.c  memcmp.c  memcmp_bcmp.c  memcpy.c  memmove.c  memset.c
runtime/Intrinsic/: CMakeLists.txt  Makefile  Makefile.cmake.bitcode  dso_handle.c  klee_choose.c  klee_div_zero_check.c  klee_int.c  klee_is_replay.c  klee_make_symbolic.c  klee_mark_arg_symbolic.c  klee_overshift_check.c  klee_range.c  klee_signed_div_overflow_check.c  klee_signed_overflow_check.c  memcpy.c  memmove.c  mempcpy.c  memset.c  newlocale.c
runtime/Mocks/: CMakeLists.txt  models.c
runtime/POSIX/: CMakeLists.txt  FreeBSD.h  Makefile  Makefile.cmake.bitcode  common.c  common.h  config.h  errno_location.c  fd.c  fd.h  fd_32.c  fd_64.c  fd_init.c  illegal.c  input_output.c  klee_init_env.c  misc.c  multiprocess.h  multiprocess_init.c  selinux.c  semaphores.c  sockets.c  sockets.c.inc  sockets.h  stubs.c  testing-env  threads.c  threads.h  threads_init.c  threadsync.c
runtime/Runtest/: CMakeLists.txt  Makefile  intrinsics.c
runtime/Sanitizer/: CMakeLists.txt  README.md
runtime/klee-eh-cxx/: CMakeLists.txt  Makefile.cmake.bitcode  (+1 more)
tools/: CMakeLists.txt  Makefile
unittests/: CMakeLists.txt  Makefile  TestMain.cpp  lit-unit-tests-common.cfg  lit-unit-tests-common.site.cfg.in
(+3978 files in other folders)
